tests/fixtures/invalid/app/invalid-nested-has.php
<?php

use Illuminate\Support\Facades\Config;

echo Config::has('app.nested.invalid_key');
